# poolside-hackathon

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  IMPLEMENTATION.md  MEMORY.md  PROBLEM.md  PROGRESS.md  README.md  VLLM_SETUP.md  WRITEUP.md  WRITEUP_EXTENSIONS.md  benchmark.py  boundary_detector.py  demo.sh  dynamic_inference.py  dynamic_tokenizer.py  hierarchy.py  inference.py  kv_cache.py  kv_quant.py  load_from_API.py  load_locally.py  pyproject.toml  requirements.txt  run.py  run.sh  test_e2e.py
.github/workflows/: deploy.yml
.tools/: serve.sh  stop.sh
docker/: entrypoint.sh
int4_kivi/: __init__.py  _probe.py  cache.py  decode.py  hf_cache.py  residual_hf_cache.py  triton_kernels.py
scripts/: _common.py  bench_int4_kivi.py  bench_paged_decode.py  bench_quant_vs_flash.py  benchmark_math.py  ceiling_and_mem.py  decode_latency_serving.py  diag_kernel_perchannel.py  humaneval_bench.py  int4_kivi_generate.py  load_locally.py  longctx_code_bench.py  longctx_code_serving.py  longctx_residual_ab.py  longctx_sweep.py  needle_code_bench.py  needle_serving.py  quant_ab.py  quant_accuracy.py  quant_inference.py  quant_longctx.py  quant_sweep.py  run_e2e.py  speedup_int4_kivi.py  sweep_decode.py  sweep_laguna.py  validate_int4_kivi_decode.py  validate_laguna.py  validate_local.py  validate_nvfp4_kivi.py  validate_paged_decode.py  validate_residual_cache.py  validate_store_equiv.py
tests/: _rope_ref.py  test_eviction.py  test_int4_kivi.py  test_rope.py  test_scoring.py
triattention/: __init__.py  calibration.py  generate.py  rope.py  scoring.py
